# Bilinc

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CI_DEADCODE_AUDIT.md  FINAL_ACCEPTANCE.md  LICENSE  MASTER_PROMPT.md  MILESTONES.md  PRODUCTION_CHECKLIST.md  README.md  audit_trail.db  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: BENCHMARK_RESULTS.md  LONGMEMEVAL_RESULTS.md  RECALL_INTEGRATION_PLAN.md  __init__.py  bench_agm_stress.py  bench_consolidation.py  bench_retrieval.py  bench_verification.py  convomem_bench.py  locomo_bench.py  longmemeval_bench.py  results.json  run_all.py  run_benchmarks.py
benchmarks/results/: convomem_results.json  locomo_results.json  longmemeval_results.json
docs/: architecture.md  hermes-integration-contract.md  hermes-integration.md  mcp-server.md  observability.md  release.md  runbook.md  security.md
examples/: openclaw_integration.py
research/: 00-ecosystem-index.md  01-human-brain-cognitive-architecture.md  02-arxiv-papers-survey.md  03-github-projects-survey.md  04-pypi-packages-survey.md  05-ai-agent-architectures-analysis.md  06-todays-brain-ai-research.md  07-explorax-agentic-skills.md  MASTER_RESEARCH_SYNTHESIS.md  MEGA_PROMPT.md  memory_landscape_report.md  phase3-to-v1-roadmap.md  phase4-detail-plan.md  phase5-detail-plan.md
research/findings/architectures/: 1--memgpt---letta---virtual-context-management.md  10--reflexion---self-reflection-in-agents.md  2--openai-swarm---multi-agent-coordination.md  3--crewai---role-based-agent-collaboration.md  4--metagpt---software-company-simulation.md  5--autogen--microsoft----conversational-agent-framework.md  6--langgraph---state-machine-based-agent-workflows.md  7--cogagent---visual-cognitive-agent.md  8--voyager---minecraft-lifelong-learning-agent.md  9--generative-agents--stanford----simulated-human-behavior.md  autogen.md  cogagent.md  crewai.md  generative-agents.md  langgraph.md  memgpt-letta.md  metagpt.md  openai-swarm.md  reflexion.md  voyager.md
research/findings/brain-mapping/: 1-memory-systems.md  2-thinking--reasoning.md  3-imagination--creativity.md  4-attention-mechanisms.md  5-learning-mechanisms.md  6-decision-making.md  7-metacognition.md  8-sleep--memory-consolidation.md  integrated-ai-agent-brain-architecture.md  key-implementation-priorities.md
research/findings/papers/arxiv/: cat01-memory-systems.md  cat02-reasoning-planning.md  cat03-long-term-memory.md  cat04-cognitive-architectures.md  cat05-neuro-symbolic.md  cat06-memory-augmented.md  cat07-rag-variants.md  cat08-metacognition.md  cat09-forgetting.md  cat10-imagination.md
research/findings/repos/github/: ai-agent-frameworks.md  cognitive-architectures.md  memory-systems-for-ai-agents.md  neural-network-memory---brain-inspired-implementations.md  planning---task-decomposition.md  rag-systems---knowledge-graphs.md  reasoning-engines---neuro-symbolic-ai.md  self-improving---metacognitive-agents.md  state-management---orchestration.md  surveys--paper-lists---awesome-collections.md
research/findings/synthesis/: master-synthesis.md
scripts/: hermes_setup.sh  setup.sh
src/bilinc/: __init__.py  scheduler.py
src/bilinc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/bilinc/adaptive/: __init__.py  agm_engine.py  consolidation.py  forgetting.py  forgetting_engine.py  policy.py
src/bilinc/cli/: __init__.py  __main__.py  main.py
src/bilinc/core/: __init__.py  agm.py  audit.py  belief_sync.py  blind_spots.py  confidence.py  consolidation.py  decay.py  dual_process.py  kg_retrieval.py  knowledge_graph.py  models.py  stateplane.py  temporal.py  vector_search.py  verification.py  verifier.py  working_memory.py
src/bilinc/integrations/: __init__.py  cross_tool.py  langgraph.py
src/bilinc/jobs/: __init__.py  definitions.py
src/bilinc/mcp_server/: __init__.py  _deprecated_server.py  hermes_stdio.py  rate_limiter.py  server.py  server_v2.py
src/bilinc/observability/: __init__.py  health.py  logging.py  metrics.py
src/bilinc/retrieval/: __init__.py  hybrid.py
src/bilinc/security/: __init__.py  input_validator.py  limits.py  resource_limits.py  validator.py
src/bilinc/storage/: __init__.py  backend.py  memory.py  postgres.py  sqlite.py
src/synaptic_state/: __init__.py
src/synaptic_state.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/synaptic_state/adaptive/: __init__.py  budget.py  forgetting.py
src/synaptic_state/cli/: __init__.py  main.py
src/synaptic_state/core/: __init__.py  agm.py  models.py  stateplane.py  verification.py
src/synaptic_state/integrations/: __init__.py  cross_tool.py  langgraph.py
src/synaptic_state/mcp_server/: __init__.py  server.py
src/synaptic_state/retrieval/: __init__.py  hybrid.py
src/synaptic_state/storage/: __init__.py  backend.py  memory.py  postgres.py
tests/: snapshot_seed.py  test_agm_engine.py  test_belief_sync.py  test_blind_spots.py  test_cli_error_paths.py  test_consolidation.py  test_core.py  test_decay.py  test_hermes_integration.py  test_integration.py  test_knowledge_graph.py  test_mcp_http.py  test_mcp_server_v2.py  test_observability.py  test_phase3_integration.py  test_phase7_scheduler.py  test_phase_full_snapshot.py  test_postgres_integration.py  test_security.py  test_snapshot_seed.py  test_sqlite_integration.py
tests/smoke/: test_basic.py  test_mcp.py
