[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilinc"
version = "1.0.1"
description = "Verifiable State Plane for Autonomous Agents"
readme = "README.md"
license = "MIT"
authors = [{name = "Bilinc Team"}]
requires-python = ">=3.10"
keywords = [
    "ai-agent-memory",
    "context-management",
    "belief-revision",
    "state-plane",
    "agm",
    "mcp-server",
    "verification",
    "context-budget",
    "neuro-symbolic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "z3-solver>=4.12.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "ruff>=0.1",
]
postgres = [
    "asyncpg>=0.29",
    "pgvector>=0.2",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
bilinc = "bilinc.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:Exception ignored in.*BaseEventLoop:pytest.PytestUnraisableExceptionWarning",
    "ignore:Exception ignored in.*socket:pytest.PytestUnraisableExceptionWarning",
    "default::pytest.PytestConfigWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
